<resources>
    <string name="app_name">fishCardRoomAndMVVM</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    //Languages
    //if you add new language, don't forget about add it also in LanguageManager
    <string-array name="languages">
        <item>English</item>
        <item>Polish</item>
        <item>German</item>
        <item>Italian</item>
    </string-array>

    //fragmentAdd
    <string name="add_list_name">List Name</string>
    <string name="native_language">Native Language</string>
    <string name="foreign_language">Foreign language</string>
    <string name="add_list">Add List</string>
    <string name="add_Fish_list_label">Add new List</string>
    <string name="bar_Title">Add new list</string>
    <string name="list_added">List Added: %1$s</string>
    <string name="not_correct">Complete all fields correctly</string>
    <string name="select">Select</string>
    <string name="add_new_list">Add New List</string>
    <string name="id">ID</string>
    <string name="languages">Languages</string>
    <string name="my_lists">My Lists</string>
    <string name="search">Search</string>
    <string name="add">add</string>
    <string name="no_find">Unfortunately we didn\'t find what are you looking for :(</string>
    <string name="delete">Delete List</string>
    <string name="rename">Rename</string>
    <string name="learn">Learn</string>
    <string name="statistics">Statistics</string>
    <string name="fab_fishList_description">add new word to list or confirm edited word</string>
    <string name="home">Home</string>
    <string name="new_word">New Word</string>
    <string name="translation">Translation %1$s</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="delete_word">Delete</string>
    <string name="bottom_id_words_title">Words</string>
    <string name="bottom_id_spelling_title">Spelling</string>
    <string name="options">Options</string>
    <string name="show_statistics">Show Statistics</string>
    <string name="animations_on_off">Animations on/off</string>
    <string name="shuffle_list">Random list</string>
    <string name="save_answers">Save answers</string>
    <string name="always_show_translation">Always show Translation</string>
    <string name="add_at_lest_3_words_to_your_list">Add at least 3 words to your list</string>
    <string name="next">Next</string>
    <string name="i_dont_know">I don\'t know</string>
    <string name="i_know">I Know</string>
    <string name="show_translation">translation</string>
    <string name="hide">Hide</string>
    <string name="list_will_be_random">At next learning, list will be random</string>
    <string name="list_normal_order">At next learning, list will be in normal order</string>
    <string name="random_list">Random list</string>
    <string name="show_hint">Show hint during writing</string>


</resources>