<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.LearnWord.FragmentWordsOptions">

    <data>

        <variable
            name="viewModel"
            type="com.applications.fishcardroomandmvvm.viewModels.FragmentOptionsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/activity_color">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">


            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_show_translation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.ShowWithTranslate}"
                android:onCheckedChanged="@{(switch, checked) -> viewModel.showWithTranslate(checked)}"
                android:text="@string/always_show_translation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_save_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.saveData}"
                android:onCheckedChanged="@{(switch, checked) -> viewModel.saveData(checked)}"
                android:text="@string/save_answers"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switch_show_translation" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_random_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.randomList}"
                android:onCheckedChanged="@{(switch, checked) -> viewModel.randomList(checked)}"
                android:text="@string/shuffle_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switch_save_data" />


            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_show_statistics"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.showStatic}"
                android:onCheckedChanged="@{(switch, checked) -> viewModel.showStatistics(checked)}"
                android:text="@string/show_statistics"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switch_random_list" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>