<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.AddListFragment">

    <data>

        <variable
            name="fragmentAddViewModel"
            type="com.applications.fishcardroomandmvvm.viewModels.FragmentAddViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/add_list_name"
            android:textColorHint="#80FFFFFF"
            app:boxStrokeWidth="0dp"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_baseline_list_alt_24"
            app:startIconTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/addText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_container"
                android:configChanges="orientation"
                android:maxLines="2"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/blue_container"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingRight="8dp"
            app:layout_constraintEnd_toEndOf="@+id/add_name"
            app:layout_constraintStart_toStartOf="@+id/add_name"
            app:layout_constraintTop_toBottomOf="@+id/add_name">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/add_spinner_language_native"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:background="#fff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.65" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/native_language"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@id/add_spinner_language_native"
                app:layout_constraintEnd_toEndOf="@+id/add_spinner_language_native"
                app:layout_constraintStart_toStartOf="@+id/add_spinner_language_native"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_forward_24"
                app:layout_constraintBottom_toBottomOf="@+id/add_spinner_language_native"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/add_spinner_language_native"
                app:tint="@color/white"
                tools:ignore="ContentDescription" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/add_spinner_language_to_learn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:background="#fff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.65" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/foreign_language"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@id/add_spinner_language_to_learn"
                app:layout_constraintEnd_toEndOf="@+id/add_spinner_language_to_learn"
                app:layout_constraintStart_toStartOf="@+id/add_spinner_language_to_learn"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/add_bnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bnt_background"
            android:drawableTintMode="src_atop"
            android:onClick="@{() -> fragmentAddViewModel.addList()}"
            android:text="@string/add_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>